[gd_scene load_steps=21 format=2]

[ext_resource path="res://GCS - SHD/animation/Stick people/Idle/Idle-1.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://GCS - SHD/animation/Stick people/Idle/Idle-2.png" type="Texture" id=3]
[ext_resource path="res://GCS - SHD/animation/Stick people/Idle/Idle-3.png" type="Texture" id=4]
[ext_resource path="res://GCS - SHD/animation/Stick people/Idle/Idle-4.png" type="Texture" id=5]
[ext_resource path="res://GCS - SHD/animation/Stick people/Idle/Idle-5.png" type="Texture" id=6]
[ext_resource path="res://GCS - SHD/animation/Stick people/Idle/Idle-6.png" type="Texture" id=7]
[ext_resource path="res://GCS - SHD/animation/Stick people/Running/Run-7.png" type="Texture" id=8]
[ext_resource path="res://GCS - SHD/animation/Stick people/Running/Run-1.png" type="Texture" id=9]
[ext_resource path="res://GCS - SHD/animation/Stick people/Running/Run-2.png" type="Texture" id=10]
[ext_resource path="res://GCS - SHD/animation/Stick people/Running/Run-5.png" type="Texture" id=11]
[ext_resource path="res://GCS - SHD/animation/Stick people/Running/Run-4.png" type="Texture" id=12]
[ext_resource path="res://GCS - SHD/animation/Stick people/Running/Run-6.png" type="Texture" id=13]
[ext_resource path="res://GCS - SHD/animation/Stick people/Running/Run-3.png" type="Texture" id=14]

[sub_resource type="CapsuleShape2D" id=6]
radius = 16.0
height = 32.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 5 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 8 ) ],
"loop": true,
"name": "Running",
"speed": 15.0
} ]

[node name="Player" type="RigidBody2D"]
mode = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftJumpZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftJumpZone"]
position = Vector2( -21, 0 )
shape = SubResource( 4 )

[node name="RightJumpZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightJumpZone"]
position = Vector2( 21, 0 )
shape = SubResource( 2 )

[node name="BottomJumpZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomJumpZone"]
position = Vector2( 0, 37 )
shape = SubResource( 3 )

[node name="CenterJumpZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "Used for jump detection"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterJumpZone"]
position = Vector2( 0, 37 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 7 )
animation = "Running"
frame = 2
playing = true
